# dm-ml-openart

./: .gitignore  .gitmodules  README.md  SW-Content-Register.txt  dm-ml-openart.xml
bsp/imxrt/: generate_mpy_qstring.py
bsp/imxrt/components/: Kconfig  SConscript
bsp/imxrt/components/openmv_port/: SConscript_mpy  SConscript_omv  auto_generate_qstr.py  generate_mpy_qstring.py  makeversionhdr.py
bsp/imxrt/components/openmv_port/lv_binding_micropython/: SConscript  lv_conf.h
bsp/imxrt/components/openmv_port/lv_binding_micropython/driver/nxp/: lv_helper_nxp.c
bsp/imxrt/components/openmv_port/mimxrt_port/: irq.h  irqmap.c  irqmap.h  modled.c  modmimxrt.c  modmimxrt.h  modos.c  modrng.c  modservo.c  modservo.h  moduos_vfs.c  mpconfigport.h  mpgetcharport.c  mphalport.c  mphalport.h  mpy_main.c  mpy_pin.c  mpy_pin.h  pendsv.c  qstrdefsport.h  systick.h
bsp/imxrt/components/openmv_port/mimxrt_port/genhdr/: modmcu_mpz.h  moduledefs.h  mpversion.h  qstrdefs.generated.h  qstrdefs.predefine.h
bsp/imxrt/components/openmv_port/mimxrt_port/modules/: modpyb.c  moduos.c  modutime.c
bsp/imxrt/components/openmv_port/mimxrt_port/modules/machine/: machine_adc.c  machine_hw_i2c.c  machine_hw_spi.c  machine_pin.c  machine_pwm.c  machine_uart.c  modmachine.c
bsp/imxrt/components/openmv_port/nxp_lib/aia_cmm/: cfg_mux_mgr.c  cfg_mux_mgr.h  cmm_load.py
bsp/imxrt/components/openmv_port/nxp_lib/aia_doc/: doc_load.py  doc_mgr.c  doc_mgr.h  pc_make_doc_hash.py  svd2doc.py
bsp/imxrt/components/openmv_port/nxp_lib/aia_tf/: libtf.h  libtf.lib
bsp/imxrt/components/openmv_port/nxp_lib/fake_libc_include/: _fake_typedefs.h  fake_libc.c
bsp/imxrt/components/openmv_port/nxp_lib/fake_libc_include/sys/: statvfs.h
bsp/imxrt/components/openmv_port/omv_port/: ff_wrapper.c  ff_wrapper.h  fmath.h  framebuffer.c  imlib_config.h  mutex.c  nxp_module.c  omv_boardconfig.h  omv_main.c  omv_portconfig.h  py_sensor.c  py_tf.c  sensor.h  usbdbg.c  yuv_tab.h
bsp/imxrt/imxrt1062-nxp-evk/: .config  CMakeLists.txt  SConstruct  mcuxpresso.cmake  project.uvoptx  project.uvprojx  rtconfig.h  rtconfig.py
bsp/imxrt/imxrt1062-nxp-evk/RTE/_rtthread/: RTE_Components.h
bsp/imxrt/imxrt1062-nxp-evk/board/: Kconfig  SConscript  board.c  make-pins.py  mimxrt105x_prefix.c  mpconfigboard.h  pins_af.py  pins_af_const.h  pins_imxrtevk106x.c  pins_qstr.h
bsp/imxrt/imxrt1062-nxp-evk/board/linker_scripts/: link.ld  link.sct  link_final.ld  sdram.sct
bsp/imxrt/imxrt1062-nxp-evk/xip/: SConscript  evkmimxrt1060_sdram_ini_dcd.c
bsp/imxrt/libraries/MIMXRT1062/: SConscript
bsp/imxrt/libraries/MIMXRT1062/CMSIS/Include/: cmsis_armclang.h  cmsis_gcc.h
bsp/imxrt/libraries/MIMXRT1062/MIMXRT1062/: MIMXRT1062.h  system_MIMXRT1062.c
bsp/imxrt/libraries/MIMXRT1062/MIMXRT1062/drivers/: fsl_clock.c  fsl_common.h  fsl_iomuxc.h
bsp/imxrt/libraries/MIMXRT1062/MIMXRT1062/gcc/: startup_MIMXRT1062.S
bsp/imxrt/libraries/drivers/: drv_can.h  drv_gpio.c  drv_pwm.c  drv_rtc.c  drv_sai.c  drv_sai.h  drv_sdio.c  drv_spi.c  drv_uart.c
bsp/imxrt/libraries/drivers/usb/app/: composite.c  ring_buffer.c  usbd_msc_storage.c  virtual_com.c
bsp/imxrt/libraries/drivers/usb/include/: usb_misc.h
bsp/imxrt/libraries/lcd/: RK043FN02H.c  RK055HDMIPI4M.c  seekfree_lcd_18tft.c
bsp/imxrt/libraries/sensors/: SConscript  drv_camera.h  drv_camera_flexio.c  drv_camera_int.c  drv_camera_mipi.c  drv_camera_uart.c  mt9m114.c  mt9m114.h  ov2640.c  ov5640.c  ov7725.c  ov9650.c  scc8660.h
bsp/imxrt/tools/: sdk_dist.py
components/dfs/filesystems/elmfat/: diskio.h  ff.h  ffconf.h
components/dfs/src/: dfs_fs.c
components/drivers/i2c/: i2c_core.c
components/drivers/include/drivers/: mtd_nor.h  pin.h  watchdog.h
components/drivers/misc/: pin.c
components/drivers/mtd/: mtd_nor.c
components/drivers/sdio/: block_dev.c  mmcsd_core.c
components/drivers/spi/: spi_wifi_rw009.c  spi_wifi_rw009.h
components/drivers/usb/usbdevice/class/: hid.c
components/drivers/usb/usbdevice/core/: usbdevice.c
components/drivers/watchdog/: watchdog.c
components/finsh/: msh_file.c
components/libc/posix/io/poll/: select.c
components/net/: Kconfig
components/utilities/ymodem/: ymodem.c  ymodem.h
components/vbus/: prio_queue.c  prio_queue.h  vbus.c  vbus.h  vbus_chnx.c  watermark_queue.c  watermark_queue.h
components/vmm/: vmm.c  vmm.h  vmm_context.c  vmm_context.h  vmm_iomap.c  vmm_vector.c
examples/cifar10_lvgl/: README.md  cifar10_lvgl.py
examples/face_recognize/: FaceUtils.py  README.md  face_recognize.py  yolo_face_det.tflite
examples/gender_detection/: README.md  gender_detect.py
examples/gesture_recognize/: README.md  gesture.py  gesture.tflite  imagetools.py
examples/yolov3_nano/: README.md  calc_mAP.py  coco_converter.py  config.cfg  detect.py  evaluate.py  kmeans.py  kmeans_plus.py  model.py  save_tflite.py  show_loss.py  tflite_add_post_processing.py  train.py  train_all.py  utils.py  voc_convertor.py
examples/yolov3_nano/weights/: mbv1_0.25_128_128.h5  mbv1_0.25_160_160.h5  mbv1_0.25_192_192.h5  mbv1_0.25_224_224.h5  mbv1_0.5_128_128.h5  mbv1_0.5_160_160.h5  mbv1_0.5_192_192.h5  mbv1_0.5_224_224.h5
include/: rtdef.h
system/rt1062_nxp_evk/: I2C.py  LED.py  PWM.py  SPI.py  UART.py  cmm_load.py  main.py
system/rt1062_nxp_evk/aia_doc/: doc_load.py  pc_make_doc_hash.py
