CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

SET(CMAKE_SYSTEM_NAME Generic)
SET(CMAKE_SYSTEM_PROCESSOR cortex-m7)
#SET(CMAKE_VERBOSE_MAKEFILE ON)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET(CMAKE_C_COMPILER "C:/LocalData/Project/MCU/RT/RTThread/tools/env/tools/ConEmu/ConEmu/../../../tools/gnu_gcc/arm_gcc/mingw/bin/arm-none-eabi-gcc.exe")
SET(CMAKE_ASM_COMPILER "C:/LocalData/Project/MCU/RT/RTThread/tools/env/tools/ConEmu/ConEmu/../../../tools/gnu_gcc/arm_gcc/mingw/bin/arm-none-eabi-gcc.exe")
SET(CMAKE_C_FLAGS " -mcpu=cortex-m7 -mthumb -mfpu=fpv5-d16 -mfloat-abi=hard -ffunction-sections -fdata-sections -Wall -D__FPU_PRESENT -eentry -g -O0")
SET(CMAKE_ASM_FLAGS " -c -mcpu=cortex-m7 -mthumb -mfpu=fpv5-d16 -mfloat-abi=hard -ffunction-sections -fdata-sections -x assembler-with-cpp -Wa,-mimplicit-it=thumb -D__START=entry -D__STARTUP_INITIALIZE_NONCACHEDATA -D__STARTUP_CLEAR_BSS -g"CACHE STRING " ASM Flags ")
SET(CMAKE_C_COMPILER_WORKS TRUE)

SET(CMAKE_CXX_COMPILER "C:/LocalData/Project/MCU/RT/RTThread/tools/env/tools/ConEmu/ConEmu/../../../tools/gnu_gcc/arm_gcc/mingw/bin/arm-none-eabi-g++.exe")
SET(CMAKE_CXX_FLAGS " -Woverloaded-virtual -fno-exceptions -fno-rtti ")
SET(CMAKE_CXX_COMPILER_WORKS TRUE)

SET(CMAKE_OBJCOPY "C:/LocalData/Project/MCU/RT/RTThread/tools/env/tools/ConEmu/ConEmu/../../../tools/gnu_gcc/arm_gcc/mingw/bin/arm-none-eabi-objcopy.exe")
SET(CMAKE_SIZE "C:/LocalData/Project/MCU/RT/RTThread/tools/env/tools/ConEmu/ConEmu/../../../tools/gnu_gcc/arm_gcc/mingw/bin/arm-none-eabi-size.exe")

SET(CMAKE_CXX_STANDARD 14)
PROJECT(rtthread C CXX ASM)
INCLUDE_DIRECTORIES(
	applications
	../../../components/libc/compilers/common/include
	../../../components/libc/compilers/newlib
	../../../libcpu/arm/common
	../../../libcpu/arm/cortex-m7
	../../../components/drivers/include
	../../../components/drivers/spi
	../../../components/drivers/touch
	board
	board/MCUX_Config
	board/ports
	../libraries/drivers
	../libraries/drivers/config
	../libraries/drivers/wlan/esp8266
	../../../components/dfs/include
	../../../components/dfs/filesystems/devfs
	../../../components/dfs/filesystems/elmfat
	../../../components/dfs/filesystems/ramfs
	../../../components/finsh
	.
	../../../include
	../libraries/lcd
	../../../components/legacy
	../../../components/legacy/dfs
	../libraries/MIMXRT1062/CMSIS/Include
	../libraries/MIMXRT1062/MIMXRT1062
	../libraries/MIMXRT1062/MIMXRT1062/drivers
	../components/openmv_port/lv_binding_micropython
	../components/openmv_port/lv_binding_micropython/lvgl
	../components/openmv_port/lv_binding_micropython/lvgl/src
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_core
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_draw
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_gpu
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_hal
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_misc
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_thems
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets
	../components/openmv_port/lv_binding_micropython/driver/nxp
	../components/openmv_port/lv_binding_micropython/driver/png/lodepng
	../components/openmv_port
	../components/openmv_port/mimxrt_port
	../components/openmv_port/mimxrt_port/modules
	../components/openmv_port/mimxrt_port/modules/machine
	../components/openmv_port/nxp_lib
	../components/openmv_port/nxp_lib/fake_libc_include
	../components/openmv/src/micropython
	../components/openmv/src/micropython/py
	../components/openmv/src/micropython/extmod
	../components/openmv_port/omv_port
	../components/openmv/src/omv/alloc
	../components/openmv/src/omv/common
	../components/openmv/src/omv/imlib
	../components/openmv/src/omv/modules
	../components/openmv/src/omv/modules/ulab/code
	../components/openmv/src/omv/modules/ulab/code/scipy/linalg
	../components/openmv/src/omv/modules/ulab/code/scipy/optimize
	../components/openmv/src/omv/modules/ulab/code/scipy/special
	../components/openmv/src/omv/modules/ulab/code/numpy/ndarray
	../components/openmv/src/omv/modules/ulab/code/numpy
	../components/openmv/src/omv/modules/ulab/code/numpy/carray
	../components/openmv/src/omv/modules/ulab/code/numpy/io
	../components/openmv/src/omv/modules/ulab/code/numpy/fft
	../components/openmv/src/omv/modules/ulab/code/user
	../components/openmv/src/omv/modules/ulab/code/utils
	../../../components/libc/posix/io/poll
	../../../components/libc/posix/io/stdio
	../../../components/libc/posix/ipc
	../../../components/net/netdev/include
	../../../components/net/sal/include
	../../../components/net/sal/include/socket
	../../../components/net/sal/include/dfs_net
	../../../components/net/sal/include/socket/sys_socket
	../libraries/sensors
	../libraries/drivers/usb
	../libraries/drivers/usb/config
	../libraries/drivers/usb/app
	../libraries/drivers/usb/include
	../libraries/drivers/usb/phy
	../libraries/drivers/usb/device
	../libraries/drivers/usb/omv
	xip
)

ADD_DEFINITIONS(
	-DARM_MATH_CM7
	-DCPU_MIMXRT1062DVL6A
	-DENDIANNESS
	-DEVK_MCIMXRM
	-DFSL_SDK_ENABLE_DRIVER_CACHE_CONTROL
	-DFSL_SDK_ENABLE_DRIVER_CACHE_CONTROL=1
	-DHARD_FP
	-DHAVE_CCONFIG_H
	-DOMV_FB_OVERLAY_MEMORY
	-DRT_USING_LIBC
	-DRT_USING_NEWLIB
	-DSKIP_SYSCLK_INIT
	-DSTD=C99
	-DXIP_BOOT_HEADER_ENABLE=1
	-DXIP_EXTERNAL_FLASH=1
	-D_POSIX_C_SOURCE=1
	-D__FPU_PRESENT
	-D__RTTHREAD__
	-D__SCB_DCACHE_LINE_SIZE=32
	-D__STARTUP_CLEAR_BSS
	-D__STARTUP_INITIALIZE_RAMFUNCTION
)

SET(PROJECT_SOURCES
	applications/main.c
	../../../components/libc/compilers/common/cctype.c
	../../../components/libc/compilers/common/cstdio.c
	../../../components/libc/compilers/common/cstdlib.c
	../../../components/libc/compilers/common/cstring.c
	../../../components/libc/compilers/common/ctime.c
	../../../components/libc/compilers/common/cwchar.c
	../../../components/libc/compilers/newlib/syscalls.c
	../../../libcpu/arm/common/showmem.c
	../../../libcpu/arm/common/backtrace.c
	../../../libcpu/arm/common/div0.c
	../../../libcpu/arm/cortex-m7/cpu_cache.c
	../../../libcpu/arm/cortex-m7/cpuport.c
	../../../libcpu/arm/cortex-m7/context_gcc.S
	../../../components/drivers/can/can.c
	../../../components/drivers/hwtimer/hwtimer.c
	../../../components/drivers/i2c/i2c_core.c
	../../../components/drivers/i2c/i2c_dev.c
	../../../components/drivers/ipc/completion.c
	../../../components/drivers/ipc/dataqueue.c
	../../../components/drivers/ipc/pipe.c
	../../../components/drivers/ipc/ringblk_buf.c
	../../../components/drivers/ipc/ringbuffer.c
	../../../components/drivers/ipc/waitqueue.c
	../../../components/drivers/ipc/workqueue.c
	../../../components/drivers/misc/adc.c
	../../../components/drivers/misc/pin.c
	../../../components/drivers/misc/rt_drv_pwm.c
	../../../components/drivers/rtc/rtc.c
	../../../components/drivers/sdio/block_dev.c
	../../../components/drivers/sdio/mmc.c
	../../../components/drivers/sdio/mmcsd_core.c
	../../../components/drivers/sdio/sd.c
	../../../components/drivers/sdio/sdio.c
	../../../components/drivers/serial/serial.c
	../../../components/drivers/spi/qspi_core.c
	../../../components/drivers/spi/spi_core.c
	../../../components/drivers/spi/spi_dev.c
	../../../components/drivers/touch/touch.c
	../../../components/drivers/watchdog/watchdog.c
	board/MCUX_Config/clock_config.c
	board/MCUX_Config/pin_mux.c
	board/board.c
	board/pins_imxrtevk106x.c
	../libraries/drivers/drv_adc.c
	../libraries/drivers/drv_can.c
	../libraries/drivers/drv_gpio.c
	../libraries/drivers/drv_hwtimer.c
	../libraries/drivers/drv_i2c.c
	../libraries/drivers/drv_pwm.c
	../libraries/drivers/drv_rtc.c
	../libraries/drivers/drv_sdio.c
	../libraries/drivers/drv_spi.c
	../libraries/drivers/drv_uart.c
	../libraries/drivers/drv_wdt.c
	../../../components/dfs/filesystems/devfs/devfs.c
	../../../components/dfs/filesystems/elmfat/dfs_elm.c
	../../../components/dfs/filesystems/elmfat/ff.c
	../../../components/dfs/filesystems/elmfat/ffunicode.c
	../../../components/dfs/filesystems/ramfs/dfs_ramfs.c
	../../../components/dfs/src/dfs.c
	../../../components/dfs/src/dfs_file.c
	../../../components/dfs/src/dfs_fs.c
	../../../components/dfs/src/dfs_posix.c
	../../../components/finsh/shell.c
	../../../components/finsh/msh.c
	../../../components/finsh/msh_parse.c
	../../../components/finsh/cmd.c
	../../../components/finsh/msh_file.c
	../../../src/clock.c
	../../../src/components.c
	../../../src/device.c
	../../../src/idle.c
	../../../src/ipc.c
	../../../src/irq.c
	../../../src/kservice.c
	../../../src/memheap.c
	../../../src/mempool.c
	../../../src/object.c
	../../../src/scheduler.c
	../../../src/signal.c
	../../../src/thread.c
	../../../src/timer.c
	../libraries/lcd/fsl_ft5406_rt.c
	../libraries/lcd/RK043FN02H.c
	../../../components/legacy/ipc/workqueue_legacy.c
	../libraries/MIMXRT1062/MIMXRT1062/drivers/fsl_flexcan.c
	../libraries/MIMXRT1062/MIMXRT1062/gcc/startup_MIMXRT1062.S
	../libraries/MIMXRT1062/MIMXRT1062/drivers/fsl_wdog.c
	../libraries/MIMXRT1062/MIMXRT1062/drivers/fsl_trng.c
	../libraries/MIMXRT1062/MIMXRT1062/drivers/fsl_lpspi.c
	../libraries/MIMXRT1062/MIMXRT1062/drivers/fsl_adc.c
	../libraries/MIMXRT1062/MIMXRT1062/drivers/fsl_clock.c
	../libraries/MIMXRT1062/MIMXRT1062/drivers/fsl_cache.c
	../libraries/MIMXRT1062/MIMXRT1062/drivers/fsl_rtwdog.c
	../libraries/MIMXRT1062/MIMXRT1062/drivers/fsl_csi.c
	../libraries/MIMXRT1062/MIMXRT1062/drivers/fsl_qtmr.c
	../libraries/MIMXRT1062/MIMXRT1062/drivers/fsl_snvs_lp.c
	../libraries/MIMXRT1062/MIMXRT1062/drivers/fsl_gpio.c
	../libraries/MIMXRT1062/MIMXRT1062/drivers/fsl_pwm.c
	../libraries/MIMXRT1062/MIMXRT1062/drivers/fsl_lpspi_edma.c
	../libraries/MIMXRT1062/MIMXRT1062/drivers/fsl_common.c
	../libraries/MIMXRT1062/MIMXRT1062/drivers/fsl_lpuart.c
	../libraries/MIMXRT1062/MIMXRT1062/system_MIMXRT1062.c
	../libraries/MIMXRT1062/MIMXRT1062/drivers/fsl_elcdif.c
	../libraries/MIMXRT1062/MIMXRT1062/drivers/fsl_dmamux.c
	../libraries/MIMXRT1062/MIMXRT1062/drivers/fsl_edma.c
	../libraries/MIMXRT1062/MIMXRT1062/drivers/fsl_gpt.c
	../libraries/MIMXRT1062/MIMXRT1062/drivers/fsl_lpi2c.c
	../libraries/MIMXRT1062/MIMXRT1062/drivers/fsl_usdhc.c
	../libraries/MIMXRT1062/MIMXRT1062/drivers/fsl_snvs_hp.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_draw/lv_draw_arc.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_misc/lv_txt_ap.c
	../components/openmv_port/lv_binding_micropython/gen/lv_mpy.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_arc.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_core/lv_group.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_gauge.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_gpu/lv_gpu_nxp_pxp_osa.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_calendar.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_hal/lv_hal_tick.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_montserrat_26.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_themes/lv_theme_template.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_unscii_16.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_misc/lv_bidi.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_imgbtn.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_montserrat_46.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_canvas.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_win.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_keyboard.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_draw/lv_draw_label.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_hal/lv_hal_disp.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_label.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_misc/lv_debug.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_misc/lv_task.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_montserrat_42.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_misc/lv_anim.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_themes/lv_theme.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_spinbox.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_table.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_misc/lv_area.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_draw/lv_img_buf.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_led.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_misc/lv_utils.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_draw/lv_draw_line.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_chart.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_draw/lv_draw_mask.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_tabview.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_misc/lv_math.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_montserrat_22.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_montserrat_34.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_loader.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_line.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_objx_templ.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_themes/lv_theme_material.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_hal/lv_hal_indev.c
	../components/openmv_port/lv_binding_micropython/driver/nxp/input.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_misc/lv_txt.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_unscii_8.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_montserrat_48.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_linemeter.c
	../components/openmv_port/lv_binding_micropython/driver/png/gen/lodepng.pp.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_misc/lv_ll.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_montserrat_40.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_draw/lv_img_cache.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_btn.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_checkbox.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_montserrat_28_compressed.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_misc/lv_mem.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_list.c
	../components/openmv_port/lv_binding_micropython/driver/nxp/lv_helper_nxp.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_spinner.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_draw/lv_draw_rect.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_draw/lv_draw_triangle.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_objmask.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_roller.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_bar.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_montserrat_12.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_montserrat_20.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_montserrat_12_subpx.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_montserrat_14.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_montserrat_10.c
	../components/openmv_port/lv_binding_micropython/driver/png/gen/mp_lodepng.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_montserrat_30.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_montserrat_8.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_core/lv_obj.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_switch.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_misc/lv_async.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_montserrat_44.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_misc/lv_color.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_misc/lv_log.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_cont.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_montserrat_38.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_gpu/lv_gpu_nxp_vglite.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_tileview.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_gpu/lv_gpu_nxp_pxp.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_montserrat_28.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_montserrat_24.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_cpicker.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_page.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_core/lv_refr.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_draw/lv_draw_img.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_core/lv_disp.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_simsun_16_cjk.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_misc/lv_printf.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_textarea.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_themes/lv_theme_mono.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_draw/lv_img_decoder.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_dropdown.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_core/lv_indev.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_draw/lv_draw_blend.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_themes/lv_theme_empty.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_dejavu_16_persian_hebrew.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_montserrat_18.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_fmt_txt.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_gpu/lv_gpu_stm32_dma2d.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_core/lv_style.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_btnmatrix.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_slider.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_msgbox.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_montserrat_32.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_misc/lv_fs.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_misc/lv_templ.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_montserrat_16.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_misc/lv_gc.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_widgets/lv_img.c
	../components/openmv_port/lv_binding_micropython/driver/png/gen/lodepng.c
	../components/openmv_port/lv_binding_micropython/lvgl/src/lv_font/lv_font_montserrat_36.c
	../components/openmv/src/micropython/extmod/machine_pinbase.c
	../components/openmv_port/mimxrt_port/modules/machine/machine_rtc.c
	../components/openmv_port/mimxrt_port/modules/machine/machine_lcd.c
	../components/openmv/src/micropython/py/objboundmeth.c
	../components/openmv/src/micropython/py/builtinimport.c
	../components/openmv/src/micropython/py/objproperty.c
	../components/openmv/src/micropython/py/objset.c
	../components/openmv/src/micropython/extmod/machine_spi.c
	../components/openmv_port/mimxrt_port/modos.c
	../components/openmv/src/micropython/py/emitcommon.c
	../components/openmv/src/micropython/py/gc.c
	../components/openmv/src/micropython/py/objcomplex.c
	../components/openmv/src/micropython/py/objgetitemiter.c
	../components/openmv/src/micropython/py/objobject.c
	../components/openmv/src/micropython/extmod/machine_pulse.c
	../components/openmv_port/mimxrt_port/modules/machine/machine_timer.c
	../components/openmv_port/mimxrt_port/modules/machine/machine_wdt.c
	../components/openmv/src/micropython/py/emitnarm.c
	../components/openmv/src/micropython/py/builtinhelp.c
	../components/openmv/src/micropython/py/pairheap.c
	../components/openmv/src/micropython/py/smallint.c
	../components/openmv/src/micropython/shared/timeutils/timeutils.c
	../components/openmv_port/mimxrt_port/modules/machine/machine_adc.c
	../components/openmv/src/micropython/extmod/vfs_blockdev.c
	../components/openmv_port/nxp_lib/fake_libc_include/fake_libc.c
	../components/openmv/src/micropython/py/modbuiltins.c
	../components/openmv/src/micropython/py/modmicropython.c
	../components/openmv/src/micropython/py/objdeque.c
	../components/openmv/src/micropython/py/omvdummy.c
	../components/openmv/src/micropython/extmod/moduselect.c
	../components/openmv_port/mimxrt_port/modules/modpyb.c
	../components/openmv/src/micropython/py/binary.c
	../components/openmv/src/micropython/py/bc.c
	../components/openmv/src/micropython/py/objint.c
	../components/openmv/src/micropython/py/stackctrl.c
	../components/openmv/src/micropython/extmod/utime_mphal.c
	../components/openmv/src/micropython/py/objbool.c
	../components/openmv/src/micropython/py/modstruct.c
	../components/openmv/src/micropython/py/objdict.c
	../components/openmv/src/micropython/py/profile.c
	../components/openmv/src/micropython/py/objnamedtuple.c
	../components/openmv/src/micropython/extmod/modusocket.c
	../components/openmv_port/mimxrt_port/modled.c
	../components/openmv_port/mimxrt_port/modules/machine/machine_pwm.c
	../components/openmv/src/micropython/py/mpz.c
	../components/openmv/src/micropython/py/objrange.c
	../components/openmv/src/micropython/py/persistentcode.c
	../components/openmv/src/micropython/extmod/machine_i2c.c
	../components/openmv_port/mimxrt_port/modmimxrt.c
	../components/openmv/src/micropython/extmod/vfs_reader.c
	../components/openmv/src/micropython/py/objenumerate.c
	../components/openmv/src/micropython/py/emitbc.c
	../components/openmv/src/micropython/py/objexcept.c
	../components/openmv/src/micropython/py/ringbuf.c
	../components/openmv/src/micropython/py/qstr.c
	../components/openmv/src/micropython/extmod/modutimeq.c
	../components/openmv_port/nxp_lib/aia_cmm/cfg_mux_mgr.c
	../components/openmv/src/micropython/extmod/vfs_posix_file.c
	../components/openmv/src/micropython/py/modsys.c
	../components/openmv/src/micropython/py/asmbase.c
	../components/openmv/src/micropython/py/objreversed.c
	../components/openmv/src/micropython/py/objtype.c
	../components/openmv/src/micropython/extmod/machine_mem.c
	../components/openmv/src/micropython/extmod/vfs_fat.c
	../components/openmv/src/micropython/extmod/vfs_fat_file.c
	../components/openmv/src/micropython/py/modarray.c
	../components/openmv/src/micropython/py/emitnthumb.c
	../components/openmv/src/micropython/py/objfilter.c
	../components/openmv/src/micropython/py/runtime_utils.c
	../components/openmv/src/micropython/extmod/moduwebsocket.c
	../components/openmv_port/mimxrt_port/modules/machine/machine_hw_i2c.c
	../components/openmv/src/micropython/py/asmthumb.c
	../components/openmv/src/micropython/py/nlrthumb.c
	../components/openmv/src/micropython/py/objint_longlong.c
	../components/openmv/src/micropython/py/objzip.c
	../components/openmv/src/micropython/extmod/modussl_mbedtls.c
	../components/openmv_port/mimxrt_port/mpputsnport.c
	../components/openmv_port/mimxrt_port/mphalport.c
	../components/openmv/src/micropython/py/compile.c
	../components/openmv/src/micropython/py/argcheck.c
	../components/openmv/src/micropython/py/objfloat.c
	../components/openmv/src/micropython/py/parsenum.c
	../components/openmv/src/micropython/py/objint_mpz.c
	../components/openmv/src/micropython/extmod/modure.c
	../components/openmv/src/micropython/extmod/virtpin.c
	../components/openmv/src/micropython/py/formatfloat.c
	../components/openmv/src/micropython/py/obj.c
	../components/openmv/src/micropython/py/objstringio.c
	../components/openmv/src/micropython/py/scheduler.c
	../components/openmv/src/micropython/extmod/modnetwork.c
	../components/openmv_port/mimxrt_port/modules/modrtthread.c
	../components/openmv_port/mimxrt_port/gccollect.c
	../components/openmv/src/micropython/py/mpprint.c
	../components/openmv/src/micropython/py/builtinevex.c
	../components/openmv/src/micropython/py/objfun.c
	../components/openmv/src/micropython/py/objmap.c
	../components/openmv/src/micropython/shared/runtime/gchelper_generic.c
	../components/openmv/src/micropython/extmod/moduzlib.c
	../components/openmv_port/mimxrt_port/irqmap.c
	../components/openmv/src/micropython/py/asmarm.c
	../components/openmv/src/micropython/py/modcollections.c
	../components/openmv/src/micropython/py/objstrunicode.c
	../components/openmv/src/micropython/py/stream.c
	../components/openmv/src/micropython/extmod/modubinascii.c
	../components/openmv_port/mimxrt_port/moduos_vfs.c
	../components/openmv_port/mimxrt_port/mpy_main.c
	../components/openmv/src/micropython/py/nlr.c
	../components/openmv/src/micropython/py/lexer.c
	../components/openmv/src/micropython/py/objgenerator.c
	../components/openmv/src/micropython/py/objtuple.c
	../components/openmv/src/micropython/py/pystack.c
	../components/openmv/src/micropython/extmod/modwebrepl.c
	../components/openmv_port/mimxrt_port/mpthreadport.c
	../components/openmv/src/micropython/extmod/vfs_posix.c
	../components/openmv/src/micropython/py/emitinlinethumb.c
	../components/openmv/src/micropython/py/objarray.c
	../components/openmv/src/micropython/py/objstr.c
	../components/openmv/src/micropython/py/unicode.c
	../components/openmv/src/micropython/extmod/machine_signal.c
	../components/openmv/src/micropython/extmod/moduasyncio.c
	../components/openmv_port/mimxrt_port/mpy_pin.c
	../components/openmv/src/micropython/py/emitglue.c
	../components/openmv/src/micropython/py/malloc.c
	../components/openmv/src/micropython/py/objsingleton.c
	../components/openmv/src/micropython/py/opmethods.c
	../components/openmv/src/micropython/shared/runtime/interrupt_char.c
	../components/openmv/src/micropython/extmod/modujson.c
	../components/openmv_port/mimxrt_port/modrng.c
	../components/openmv/src/micropython/py/objslice.c
	../components/openmv/src/micropython/py/vstr.c
	../components/openmv/src/micropython/extmod/moduhashlib.c
	../components/openmv_port/mimxrt_port/pendsv.c
	../components/openmv_port/mimxrt_port/mpgetcharport.c
	../components/openmv/src/micropython/py/modgc.c
	../components/openmv/src/micropython/py/emitnative.c
	../components/openmv/src/micropython/shared/runtime/pyexec.c
	../components/openmv/src/micropython/py/reader.c
	../components/openmv/src/micropython/shared/runtime/stdout_helpers.c
	../components/openmv/src/micropython/extmod/mpbthci.c
	../components/openmv_port/mimxrt_port/modservo.c
	../components/openmv/src/micropython/drivers/bus/softspi.c
	../components/openmv_port/mimxrt_port/modules/machine/machine_hw_spi.c
	../components/openmv/src/micropython/py/frozenmod.c
	../components/openmv/src/micropython/py/parse.c
	../components/openmv/src/micropython/py/warning.c
	../components/openmv/src/micropython/extmod/moducryptolib.c
	../components/openmv/src/micropython/extmod/uos_dupterm.c
	../components/openmv/src/micropython/py/modcmath.c
	../components/openmv/src/micropython/py/parsenumbase.c
	../components/openmv/src/micropython/py/runtime.c
	../components/openmv/src/micropython/shared/runtime/mpirq.c
	../components/openmv/src/micropython/extmod/moduheapq.c
	../components/openmv/src/micropython/extmod/vfs.c
	../components/openmv_port/mimxrt_port/bufhelper.c
	../components/openmv_port/mimxrt_port/modules/machine/machine_uart.c
	../components/openmv/src/micropython/py/map.c
	../components/openmv/src/micropython/py/objmodule.c
	../components/openmv/src/micropython/py/objlist.c
	../components/openmv/src/micropython/extmod/moduplatform.c
	../components/openmv_port/mimxrt_port/modules/moduos.c
	../components/openmv/src/micropython/py/modmath.c
	../components/openmv/src/micropython/py/mpstate.c
	../components/openmv/src/micropython/py/repl.c
	../components/openmv/src/micropython/py/scope.c
	../components/openmv/src/micropython/extmod/modussl_axtls.c
	../components/openmv_port/mimxrt_port/modules/modmcu.c
	../components/openmv/src/micropython/extmod/vfs_fat_diskio.c
	../components/openmv/src/micropython/py/objattrtuple.c
	../components/openmv/src/micropython/py/objnone.c
	../components/openmv/src/micropython/py/nativeglue.c
	../components/openmv/src/micropython/extmod/modurandom.c
	../components/openmv_port/mimxrt_port/modules/machine/modmachine.c
	../components/openmv_port/mimxrt_port/modules/modutime.c
	../components/openmv/src/micropython/py/moduerrno.c
	../components/openmv/src/micropython/py/modio.c
	../components/openmv/src/micropython/py/vm.c
	../components/openmv/src/micropython/py/sequence.c
	../components/openmv/src/micropython/shared/readline/readline.c
	../components/openmv/src/micropython/extmod/moductypes.c
	../components/openmv_port/mimxrt_port/modules/machine/machine_pin.c
	../components/openmv/src/micropython/drivers/dht/dht.c
	../components/openmv_port/nxp_lib/aia_doc/doc_mgr.c
	../components/openmv/src/micropython/py/objcell.c
	../components/openmv/src/micropython/py/objclosure.c
	../components/openmv/src/micropython/py/objpolyiter.c
	../components/openmv/src/micropython/py/showbc.c
	../components/openmv/src/omv/imlib/jpeg.c
	../components/openmv/src/omv/imlib/hog.c
	../components/openmv/src/omv/modules/ulab/code/numpy/linalg/linalg_tools.c
	../components/openmv/src/hal/cmsis/src/dsp/FastMathFunctions/arm_sqrt_q31.c
	../components/openmv/src/omv/modules/ulab/code/numpy/numerical.c
	../components/openmv/src/omv/alloc/xalloc.c
	../components/openmv/src/omv/alloc/umm_malloc.c
	../components/openmv/src/omv/imlib/lab_tab.c
	../components/openmv/src/omv/imlib/mjpeg.c
	../components/openmv/src/omv/modules/ulab/code/numpy/create.c
	../components/openmv/src/omv/modules/ulab/code/ndarray_properties.c
	../components/openmv/src/omv/modules/ulab/code/numpy/poly.c
	../components/openmv/src/omv/imlib/blob.c
	../components/openmv/src/omv/modules/py_imageio.c
	../components/openmv/src/hal/cmsis/src/dsp/TransformFunctions/arm_rfft_init_q31.c
	../components/openmv_port/omv_port/sensor_utils.c
	../components/openmv/src/omv/imlib/pool.c
	../components/openmv/src/omv/imlib/qsort.c
	../components/openmv/src/omv/modules/ulab/code/numpy/stats.c
	../components/openmv/src/hal/cmsis/src/dsp/FastMathFunctions/arm_cos_q31.c
	../components/openmv/src/omv/modules/ulab/code/numpy/transform.c
	../components/openmv/src/omv/imlib/clahe.c
	../components/openmv/src/omv/common/trace.c
	../components/openmv/src/omv/modules/ulab/code/ndarray_operators.c
	../components/openmv/src/omv/imlib/rainbow_tab.c
	../components/openmv/src/omv/imlib/bmp.c
	../components/openmv/src/omv/imlib/rectangle.c
	../components/openmv_port/omv_port/py_helper.c
	../components/openmv/src/omv/modules/ulab/code/numpy/vector.c
	../components/openmv/src/hal/cmsis/src/dsp/FastMathFunctions/arm_sin_q15.c
	../components/openmv/src/omv/modules/ulab/code/numpy/numpy.c
	../components/openmv/src/omv/imlib/dmtx.c
	../components/openmv/src/omv/imlib/fft.c
	../components/openmv/src/hal/cmsis/src/dsp/TransformFunctions/arm_rfft_init_q15.c
	../components/openmv/src/hal/cmsis/src/dsp/FastMathFunctions/arm_sin_f32.c
	../components/openmv/src/omv/imlib/selective_search.c
	../components/openmv/src/omv/imlib/jpegd.c
	../components/openmv/src/omv/imlib/sincos_tab.c
	../components/openmv/src/hal/cmsis/src/dsp/FastMathFunctions/arm_cos_f32.c
	../components/openmv/src/omv/modules/ulab/code/numpy/io/io.c
	../components/openmv/src/omv/imlib/eye.c
	../components/openmv/src/omv/common/factoryreset.c
	../components/openmv/src/hal/cmsis/src/dsp/FastMathFunctions/arm_sqrt_q15.c
	../components/openmv/src/omv/modules/ulab/code/ndarray.c
	../components/openmv/src/omv/imlib/stats.c
	../components/openmv/src/omv/imlib/lbp.c
	../components/openmv/src/omv/imlib/template.c
	../components/openmv/src/omv/modules/ulab/code/numpy/carray/carray.c
	../components/openmv/src/omv/modules/ulab/code/user/user.c
	../components/openmv/src/omv/imlib/fmath.c
	../components/openmv_port/omv_port/omv_main.c
	../components/openmv/src/omv/modules/ulab/code/numpy/ndarray/ndarray_iter.c
	../components/openmv/src/omv/imlib/filter.c
	../components/openmv/src/omv/imlib/line.c
	../components/openmv/src/omv/imlib/xyz_tab.c
	../components/openmv/src/hal/cmsis/src/dsp/CommonTables/arm_const_structs.c
	../components/openmv/src/omv/imlib/fsort.c
	../components/openmv/src/omv/common/ringbuf.c
	../components/openmv/src/omv/modules/py_clock.c
	../components/openmv/src/omv/modules/ulab/code/numpy/approx.c
	../components/openmv/src/omv/imlib/draw.c
	../components/openmv/src/omv/common/array.c
	../components/openmv/src/omv/imlib/mathop.c
	../components/openmv/src/omv/imlib/yuv.c
	../components/openmv/src/omv/modules/ulab/code/numpy/carray/carray_tools.c
	../components/openmv/src/omv/imlib/imlib.c
	../components/openmv/src/omv/alloc/fb_alloc.c
	../components/openmv/src/omv/modules/py_mjpeg.c
	../components/openmv/src/omv/modules/ulab/code/numpy/compare.c
	../components/openmv/src/omv/imlib/haar.c
	../components/openmv/src/omv/imlib/edge.c
	../components/openmv/src/omv/imlib/zbar.c
	../components/openmv/src/omv/modules/examplemodule.c
	../components/openmv/src/omv/modules/ulab/code/numpy/fft/fft_tools.c
	../components/openmv/src/omv/imlib/font.c
	../components/openmv/src/omv/imlib/apriltag.c
	../components/openmv/src/omv/modules/py_image.c
	../components/openmv/src/omv/imlib/hough.c
	../components/openmv/src/omv/imlib/lsd.c
	../components/openmv_port/omv_port/usbdbg.c
	../components/openmv_port/omv_port/py_sensor.c
	../components/openmv/src/omv/modules/ulab/code/utils/utils.c
	../components/openmv/src/omv/imlib/integral.c
	../components/openmv/src/omv/imlib/point.c
	../components/openmv/src/hal/cmsis/src/dsp/CommonTables/arm_common_tables.c
	../components/openmv/src/omv/modules/py_omv.c
	../components/openmv/src/omv/imlib/png.c
	../components/openmv_port/omv_port/framebuffer.c
	../components/openmv_port/omv_port/mutex.c
	../components/openmv/src/hal/cmsis/src/dsp/FastMathFunctions/arm_sin_q31.c
	../components/openmv/src/omv/imlib/integral_mw.c
	../components/openmv/src/omv/imlib/bayer.c
	../components/openmv/src/omv/modules/ulab/code/numpy/fft/fft.c
	../components/openmv/src/omv/modules/py_gif.c
	../components/openmv/src/omv/modules/ulab/code/numpy/filter.c
	../components/openmv/src/omv/imlib/orb.c
	../components/openmv/src/omv/imlib/ppm.c
	../components/openmv_port/omv_port/ff_wrapper.c
	../components/openmv_port/omv_port/nxp_module.c
	../components/openmv/src/hal/cmsis/src/dsp/FastMathFunctions/arm_cos_q15.c
	../components/openmv/src/omv/alloc/dma_alloc.c
	../components/openmv/src/omv/imlib/gif.c
	../components/openmv/src/omv/imlib/agast.c
	../components/openmv/src/omv/imlib/phasecorrelation.c
	../components/openmv_port/omv_port/py_tf.c
	../components/openmv/src/omv/modules/ulab/code/ulab.c
	../components/openmv/src/omv/imlib/collections.c
	../components/openmv/src/omv/alloc/unaligned_memcpy.c
	../components/openmv/src/omv/modules/ulab/code/ulab_tools.c
	../components/openmv/src/omv/modules/ulab/code/numpy/linalg/linalg.c
	../components/openmv/src/omv/imlib/binary.c
	../components/openmv/src/omv/imlib/qrcode.c
	../../../components/libc/posix/io/poll/poll.c
	../../../components/libc/posix/io/poll/select.c
	../../../components/libc/posix/io/stdio/libc.c
	../../../components/net/netdev/src/netdev.c
	../../../components/net/netdev/src/netdev_ipaddr.c
	../../../components/net/sal/dfs_net/dfs_net.c
	../../../components/net/sal/socket/net_netdb.c
	../../../components/net/sal/socket/net_sockets.c
	../../../components/net/sal/src/sal_socket.c
	../libraries/sensors/drv_camera_int.c
	../libraries/sensors/mt9m114.c
	../libraries/drivers/usb/app/usb_device_ch9.c
	../libraries/drivers/usb/omv/drv_usb_omv.c
	../libraries/drivers/usb/app/composite.c
	../libraries/drivers/usb/app/usb_device_msc_ufi.c
	../libraries/drivers/usb/app/usbd_msc_storage.c
	../libraries/drivers/usb/phy/usb_phy.c
	../libraries/drivers/usb/device/usb_device_ehci.c
	../libraries/drivers/usb/app/virtual_com.c
	../libraries/drivers/usb/app/usb_device_cdc_acm.c
	../libraries/drivers/usb/app/ring_buffer.c
	../libraries/drivers/usb/app/usb_device_descriptor.c
	../libraries/drivers/usb/app/usb_device_class.c
	../libraries/drivers/usb/app/usb_device_msc.c
	../libraries/drivers/usb/device/usb_device_dci.c
	xip/evkmimxrt1060_sdram_ini_dcd.c
	xip/evkmimxrt1060_flexspi_nor_config.c
	xip/fsl_flexspi_nor_boot.c
)

SET(CMAKE_EXE_LINKER_FLAGS " -mcpu=cortex-m7 -mthumb -mfpu=fpv5-d16 -mfloat-abi=hard -ffunction-sections -fdata-sections -lm -lgcc -lc -nostartfiles -Wl,--gc-sections,-Map=rtthread.map,-cref,-u,Reset_Handler -T ${CMAKE_SOURCE_DIR}/board/linker_scripts/link_final.ld -Xlinker -print-memory-usage -lstdc++")

EXECUTE_PROCESS(COMMAND ${CMAKE_CP_COMPILER} -include ${CMAKE_SOURCE_DIR}/rtconfig.h ${CMAKE_SOURCE_DIR}/board/linker_scripts/link.ld ${CMAKE_SOURCE_DIR}/board/linker_scripts/link_final.ld)

LINK_DIRECTORIES(
	C:/LocalData/Project/MCU/RT/OpenART/rt1060/bitbucket/openart/bsp/imxrt/components/openmv_port
	C:/LocalData/Project/MCU/RT/OpenART/rt1060/bitbucket/openart/bsp/imxrt/components/openmv_port/omv_port/
)

LINK_LIBRARIES(
	c
	m
	tf
	aia_cmsisnn
	arm_cortexM7lfdp_math
	m
	stdc++
)

MESSAGE(STATUS "CMAKE_CXX_FLAGS: " ${CMAKE_CXX_FLAGS})
MESSAGE(STATUS "CMAKE_C_FLAGS : " ${CMAKE_C_FLAGS})
MESSAGE(STATUS "CMAKE_ASM_FLAGS: " ${CMAKE_C_FLAGS})
MESSAGE(STATUS "CMAKE_BUILD_TYPE: " ${CMAKE_BUILD_TYPE})
ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf ${PROJECT_SOURCES})
ADD_CUSTOM_COMMAND(TARGET ${CMAKE_PROJECT_NAME}.elf POST_BUILD 
COMMAND ${CMAKE_OBJCOPY} -O binary ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.bin COMMAND ${CMAKE_SIZE} ${CMAKE_PROJECT_NAME}.elf)